--- a/DRRadio/res/layout/kanalvalg_element.xml
+++ b/DRRadio/res/layout/kanalvalg_element.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:gravity="center_vertical"
 	android:layout_width="fill_parent" android:layout_height="wrap_content">
-   	<dk.dr.radio.util.ImageViewTilBlinde
+   	<dk.dr.radio.diverse.ImageViewTilBlinde
         android:id="@+id/billede"
         android:layout_width="wrap_content"
 		android:layout_height="50dp"
@@ -22,7 +22,7 @@
 			/>
 
 
-				<dk.dr.radio.util.ImageViewTilBlinde
+				<dk.dr.radio.diverse.ImageViewTilBlinde
 			android:id="@+id/ikon"
 			android:src="@drawable/icon_plus"
 			android:layout_weight="1"
