--- a/DRRadio/res/values/dimens.xml
+++ b/DRRadio/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="about_header_size">20sp</dimen>
+    <dimen name="button_height">30dp</dimen>
+
     <dimen name="player_channel_title_size">20sp</dimen>
     <dimen name="player_select_channel_size">14sp</dimen>
     <dimen name="player_current_program_channel_size">12sp</dimen>
