--- a/DRRadio/res/layout/splash.xml
+++ b/DRRadio/res/layout/splash.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
-  android:background="@drawable/main_app_bg" android:gravity="center_horizontal|center_vertical">
+  android:background="#FFFFFFFF" android:gravity="center_horizontal|center_vertical">
 
     <ImageView
 	 	android:id="@+id/splash_dr_logo"
