--- a/DRRadio/res/layout/kanalvalg_element.xml
+++ b/DRRadio/res/layout/kanalvalg_element.xml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:gravity="center_vertical"
-	android:layout_width="fill_parent" android:layout_height="wrap_content">
-   	<dk.dr.radio.diverse.ImageViewTilBlinde
-        android:id="@+id/billede"
-        android:layout_width="wrap_content"
-		android:layout_height="50dp"
-   		android:layout_gravity="left|center_vertical"
-   		android:scaleType="fitStart"
-   		android:src="@drawable/kanal_p1d"
-   		 />
-		<TextView
-			android:id="@+id/tekst"
-			android:layout_width="wrap_content"
-			android:layout_height="50dp"
-			android:gravity="center_vertical"
-			android:text="DR P4 i P1"
-			android:textSize="@dimen/kanalvalg_tekststr"
-			android:layout_marginLeft="10dp"
-			android:textColor="#FF000000"
-			/>
+              android:gravity="center_vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content">
+
+    <dk.dr.radio.diverse.ImageViewTilBlinde
+            android:id="@+id/billede"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="left|center_vertical"
+            android:scaleType="fitStart"
+            android:src="@drawable/kanal_p1d"
+            />
+
+    <TextView
+            android:id="@+id/tekst"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:text="DR P4 i P1"
+            android:textSize="@dimen/kanalvalg_tekststr"
+            android:layout_marginLeft="10dp"
+            android:textColor="#FF000000"
+            />
 
 
-				<dk.dr.radio.diverse.ImageViewTilBlinde
-			android:id="@+id/ikon"
-			android:src="@drawable/icon_plus"
-			android:layout_weight="1"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="@dimen/kanalvalg_tekststr"
-			android:layout_gravity="right|center_vertical"
-   		android:scaleType="fitEnd"
-			android:layout_marginRight="10dp"
-			/>
+    <dk.dr.radio.diverse.ImageViewTilBlinde
+            android:id="@+id/ikon"
+            android:src="@drawable/icon_plus"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/kanalvalg_tekststr"
+            android:layout_gravity="right|center_vertical"
+            android:scaleType="fitEnd"
+            android:layout_marginRight="10dp"
+            />
 
 </LinearLayout>
