--- a/DRRadio/res/menu/afspilning_menu.xml
+++ b/DRRadio/res/menu/afspilning_menu.xml
@@ -7,21 +7,27 @@
                     android:title="Vækkeur" />
     -->
     <item
+            android:id="@+id/v3"
+            android:icon="@android:drawable/ic_menu_add"
+            android:showAsAction="ifRoom|withText"
+            android:title="DR Radio v3"/>
+
+    <item
             android:id="@+id/om"
             android:icon="@android:drawable/ic_menu_help"
-            android:showAsAction="ifRoom|withText"
+            android:showAsAction="ifRoom"
             android:title="Om"/>
 
     <item
             android:id="@+id/indstillinger"
             android:icon="@android:drawable/ic_menu_preferences"
-            android:showAsAction="ifRoom|withText"
+            android:showAsAction="ifRoom"
             android:title="Indstillinger"/>
 
     <item
             android:id="@+id/sluk"
             android:icon="@android:drawable/ic_menu_close_clear_cancel"
-            android:showAsAction="ifRoom|withText"
+            android:showAsAction="ifRoom"
             android:title="Sluk"/>
 
 </menu>
