--- a/DRRadiov3/res/layout/nav_elem_adskiller_tyk.xml
+++ b/DRRadiov3/res/layout/nav_elem_adskiller_tyk.xml
@@ -2,12 +2,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="50dp">
+        android:layout_height="wrap_content">
 
     <View
             android:background="@color/grå"
             android:layout_width="match_parent"
-            android:layout_height="4dp"
+            android:layout_height="2dp"
             android:layout_gravity="center"
             />
 </LinearLayout>
