--- a/DRRadiov3/res/layout/nav_elem_overskrift.xml
+++ b/DRRadiov3/res/layout/nav_elem_overskrift.xml
@@ -1,6 +1,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="wrap_content"
-          android:layout_height="50dp"
-          android:textAppearance="?android:attr/textAppearanceLarge"
+          android:layout_height="wrap_content"
+          android:padding="16dp"
           android:text="HØR LIVE RADIO"
           android:id="@+id/tekst"/>
+        <!--
+                  android:textAppearance="?android:attr/textAppearanceMedium"
+        -->
