--- a/DRRadiov3/res/layout/navigation_frag.xml
+++ b/DRRadiov3/res/layout/navigation_frag.xml
@@ -5,5 +5,5 @@
           android:choiceMode="singleChoice"
           android:divider="@android:color/transparent"
           android:dividerHeight="0dp"
-          android:background="#cccc"
+          android:background="@color/hvid"
           tools:context="com.example.dk.dr.radio.akt_v3.Navigation_frag"/>
