--- a/DRRadiov3/res/values/dr_colors.xml
+++ b/DRRadiov3/res/values/dr_colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="grå">#666666</color>
-    <color name="mørk_grå">#111111</color>
+    <color name="mørkegrå">#333333</color>
+    <!--
+    <color name="lysegrå">#CCCCCC</color>
+    -->
+    <color name="lysegrå">#E5E5E5</color>
     <color name="hvid">#ffffff</color>
     <color name="sort">#000000</color>
 
