--- a/DRRadiov3/res/layout/v3_liste_celle.xml
+++ b/DRRadiov3/res/layout/v3_liste_celle.xml
@@ -10,6 +10,33 @@
             android:padding="@dimen/activity_vertical_margin"
     -->
 
+
+    <TextView
+            android:id="@+id/titel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:background="@color/lysegrå"
+            android:text="Klubværelset: Kære Studerende, husk at trække vejret"
+            tools:ignore="HardcodedText"/>
+
+    <TextView
+            android:id="@+id/undertitel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/lysegrå"
+            android:text="undertitel"
+            tools:ignore="HardcodedText"/>
+
+
+    <TextView
+            android:id="@+id/beskrivelse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/lysegrå"
+            android:text="For lige om lidt bliver fremdriftsreformen implementeret, der skal få jer hurtigere ud af jeres uddannelse. Vi taler med Morten Østergaard om de unge studerendes bekymringer for fremtiden. For hvordan hænger dygtige og arbejdsmarkedsparate akademikere sammen med et studieliv, hvor man risikerer at udvikle stress og eksamensangst? (Genudsendelse fra onsdag). (Sendes også søndag 7.03, 18.32 og 00.05)."
+            tools:ignore="HardcodedText"/>
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -21,7 +48,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:text="klubvaerelset-105"
-                tools:ignore="HardcodedText"/>
+                tools:ignore="HardcodedText"
+                android:textSize="10sp"/>
 
         <TextView
                 android:id="@+id/serieslug"
@@ -29,31 +57,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:text="klubvaerelset"
-                tools:ignore="HardcodedText"/>
+                tools:ignore="HardcodedText"
+                android:textSize="10sp"/>
     </LinearLayout>
 
-
     <TextView
-            android:id="@+id/titel"
+            android:id="@+id/debug"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Klubværelset: Kære Studerende, husk at trække vejret"
-            tools:ignore="HardcodedText"/>
-
-    <TextView
-            android:id="@+id/undertitel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="undertitel"
-            tools:ignore="HardcodedText"/>
-
-
-    <TextView
-            android:id="@+id/beskrivelse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="For lige om lidt bliver fremdriftsreformen implementeret, der skal få jer hurtigere ud af jeres uddannelse. Vi taler med Morten Østergaard om de unge studerendes bekymringer for fremtiden. For hvordan hænger dygtige og arbejdsmarkedsparate akademikere sammen med et studieliv, hvor man risikerer at udvikle stress og eksamensangst? (Genudsendelse fra onsdag). (Sendes også søndag 7.03, 18.32 og 00.05)."
-            tools:ignore="HardcodedText"/>
+            android:text="Til fejlfinding"
+            tools:ignore="HardcodedText"
+            android:textSize="10sp"/>
 
 </LinearLayout>
