--- a/DRRadiov3/res/layout/navigation_akt.xml
+++ b/DRRadiov3/res/layout/navigation_akt.xml
@@ -5,7 +5,7 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.dk.dr.radio.akt_v3.Navigation_akt">
+        tools:context="com.example.dk.dr.radio.akt_v3.Hovedaktivitet">
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
@@ -26,6 +26,6 @@
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:name="dk.dr.radio.akt_v3.Navigation_frag"/>
+            android:name="dk.dr.radio.akt_v3.Venstremenu_frag"/>
 
 </android.support.v4.widget.DrawerLayout>
