--- a/DRRadiov3/res/layout/skrald_dummy_frag.xml
+++ b/DRRadiov3/res/layout/skrald_dummy_frag.xml
@@ -6,7 +6,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="com.example.dk.dr.radio.akt_v3.Navigation_akt.Skrald_dummyFragment">
+                tools:context="com.example.dk.dr.radio.akt_v3.Hovedaktivitet.Skrald_dummyFragment">
 
     <TextView
             android:id="@+id/section_label"
