--- a/DRRadiov3/res/menu/hoved_akt.xml
+++ b/DRRadiov3/res/menu/hoved_akt.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.example.dk.dr.radio.akt_v3.Navigation_akt">
+      tools:context="com.example.dk.dr.radio.akt_v3.Hovedaktivitet">
     <item
             android:id="@+id/action_settings"
             android:title="@string/action_settings"
