--- a/DRRadiov3/res/layout/listeelement_tid_titel_kunstner.xml
+++ b/DRRadiov3/res/layout/listeelement_tid_titel_kunstner.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/hvid"
-        android:layout_margin="8dp"
+        android:padding="16dp"
         android:orientation="vertical">
 
 
@@ -14,8 +14,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="17.04"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            tools:ignore="HardcodedText"/>
+            android:textColor="@color/grå70"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            tools:ignore="HardcodedText"
+            />
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +28,7 @@
                 android:id="@+id/titel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="P3 Sporten"
                 tools:ignore="HardcodedText"
                 android:textStyle="bold"/>
@@ -36,9 +38,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:text="| Polarkreis 18"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                tools:ignore="HardcodedText"/>
+                android:text="|  Polarkreis 18"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                tools:ignore="HardcodedText"
+                android:layout_weight="1"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:src="@drawable/kanalvalg_spiller"/>
 
     </LinearLayout>
 
