--- a/DRRadiov3/res/layout/venstremenu_elem_adskiller_tyk.xml
+++ b/DRRadiov3/res/layout/venstremenu_elem_adskiller_tyk.xml
@@ -5,7 +5,7 @@
         android:layout_height="wrap_content">
 
     <View
-            android:background="@color/grå"
+            android:background="@color/grå60"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_gravity="center"
