--- a/DRRadiov3/res/values/dr_colors.xml
+++ b/DRRadiov3/res/values/dr_colors.xml
@@ -9,4 +9,7 @@
     <color name="grå70">#4d4d4d</color>
     <color name="grå80">#333333</color>
     <color name="sort">#000000</color>
+
+    <color name="blå">#55b9c4</color>
+
 </resources>
