--- a/DRRadiov3/res/layout/hoved_akt.xml
+++ b/DRRadiov3/res/layout/hoved_akt.xml
@@ -8,11 +8,49 @@
         tools:context="com.example.dk.dr.radio.akt_v3.Hovedaktivitet">
 
     <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
+         space available using match_parent in both dimensions.
     <FrameLayout
             android:id="@+id/indhold_frag"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+        <FrameLayout
+                android:id="@+id/afspiller_frag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+        <fragment
+                android:id="@+id/afspiller_frag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="dk.dr.radio.akt_v3.Venstremenu_frag"/>
+-->
+    <!-- As the main content view, the view below consumes the entire
+         space available using match_parent in both dimensions. -->
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <!-- As the main content view, the view below consumes the entire
+             space available using match_parent in both dimensions. -->
+
+        <FrameLayout
+                android:id="@+id/indhold_frag"
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:layout_weight="1"
+                />
+
+        <fragment
+                android:id="@+id/afspiller_frag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="dk.dr.radio.akt_v3.Afspiller_frag"
+                tools:layout="@layout/afspiller_lille_frag"/>
+
+
+    </LinearLayout>
+
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
@@ -26,6 +64,7 @@
             android:layout_width="@dimen/navigation_drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:name="dk.dr.radio.akt_v3.Venstremenu_frag"/>
+            android:name="dk.dr.radio.akt_v3.Venstremenu_frag"
+            tools:layout="@layout/venstremenu_frag"/>
 
 </android.support.v4.widget.DrawerLayout>
