--- a/DRRadiov3/res/layout/listeelement_billede_med_titeloverlaegning.xml
+++ b/DRRadiov3/res/layout/listeelement_billede_med_titeloverlaegning.xml
@@ -3,18 +3,25 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/eksempel_udsendelse">
+        android:background="@drawable/eksempel_udsendelse"
+        >
+    <!--
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="@color/grå60"
+                android:background="@drawable/runde_hjoerner"
+    -->
+
 
     <ImageButton
             android:id="@+id/højttalerikon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
-            android:background="@color/grå10"
-            android:src="@drawable/kanalvalg_spiller"/>
+            android:src="@drawable/dri_lyd_hvid"/>
 
     <LinearLayout
             android:id="@+id/lige_nu_og_titel_ll"
