--- a/DRRadiov3/res/values/xx_strings.xml
+++ b/DRRadiov3/res/values/xx_strings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">DR Radio v32</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
+    <string name="app_name">DR Radio v3 beta</string>
+    <string name="navigation_drawer_open">Åbn venstremenu</string>
+    <string name="navigation_drawer_close">Luk venstremenu</string>
     <string name="action_settings">Settings</string>
 
 </resources>
