Styling af actionbar Kanallogoer hentes over nettet Ny parsning af stamdata Fjernet brug af Apache HTTPClient Standard-JVM (ikke Android) main()-metoder til dataparsning

--- a/DRRadiov3/res/layout/skrald__nav_elem_kanal.xml
+++ b/DRRadiov3/res/layout/skrald__nav_elem_kanal.xml
@@ -20,7 +20,7 @@
             android:layout_height="50dp"
             android:layout_gravity="left|center_vertical"
             android:scaleType="fitStart"
-            android:src="@drawable/kanal_p1d"
+            android:src="@drawable/skrald__kanal_p1d"
             />
 
     <ImageView
