--- a/DRRadiov3/res/values/dr_colors.xml
+++ b/DRRadiov3/res/values/dr_colors.xml
@@ -12,4 +12,6 @@
 
     <color name="blå">#55b9c4</color>
 
+    <color name="actionbar_baggrund">#4d4d4d</color>
+    <color name="actionbar_kanaler_baggrund">#E5E5E5</color>
 </resources>
