--- a/DRRadiov3/res/values/dr_dimens.xml
+++ b/DRRadiov3/res/values/dr_dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="player_track_lastfm_size">8sp</dimen>
     <!-- Værdier i skærmbilledet for kanalvalg -->
     <dimen name="kanalvalg_tekststr">20sp</dimen>
+
+
+    <dimen name="kanalvisning_aktuelUdsendelse_topmargen">20dp</dimen>
 </resources>
